--- a/index.html
+++ b/index.html
@@ -3,24 +3,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>AdaptiveLearn Interface</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>AdaptiveLearn - Natural Sciences</title>
 </head>
 <body>
-    <div class="container">
-        <h1>AdaptiveLearn Chat and Call</h1>
-        <div class="chat-container">
-            <div id="chat-box"></div>
-            <input type="text" id="chat-input" placeholder="Type a message...">
-            <button onclick="sendMessage()">Send</button>
-        </div>
-        <div class="call-controls">
-            <button onclick="startVoiceCall()">Start Voice Call</button>
-            <button onclick="startVideoCall()">Start Video Call</button>
-        </div>
-        <video id="localVideo" autoplay muted></video>
-        <video id="remoteVideo" autoplay></video>
-    </div>
-    <script src="script.js"></script>
+    <h1>Welcome to the Natural Sciences Quiz</h1>
+    <a href="science.html">Start the Quiz</a>
 </body>
 </html>
