--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>AdaptiveLearn - Natural Sciences</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AdaptiveLearn</title>
 </head>
 <body>
-    <h1>Welcome to the Natural Sciences Quiz</h1>
-    <a href="science.html">Start the Quiz</a>
+  <h1>Welcome to AdaptiveLearn</h1>
+  <p>Select a subject to begin:</p>
+  <ul>
+    <li><a href="math.html">Math Quiz</a></li>
+    <li><a href="english.html">English Quiz</a></li>
+    <li><a href="science.html">Natural Sciences Quiz</a></li>
+  </ul>
 </body>
 </html>
